--- a/handout.tex
+++ b/handout.tex
@@ -993,6 +993,7 @@ meaning that random numbers are not needed to generate the result and that the o
 integer) numbers.
 \end{itemize}
 
+\citep{harland2013microsimulation}
 
 % \lhead{\emph{Bibliography}}  % Change the left side page header to
 % \fancyhead[LO,RE]{\emph{Bibliography}}
