--- a/handout.tex
+++ b/handout.tex
@@ -90,9 +90,9 @@ Click on the ``Download ZIP'' button to the right of this page and extract
 the folder into your desktop or other suitable place on your computer.
 % Could add screenshot of Dl ZIP here!!!
 
-\begin{wrapfigure}{2}{9cm}
+\begin{wrapfigure}{2}{11cm}
 \begin{center}
-   \includegraphics[width=9cm]{rstudio}
+   \includegraphics[width=10.5cm]{rstudio}
 \end{center}
  \caption{The RStudio user interface. Note the project title `smsim-course' in
 the top right and the `Files' tab at the top of the left hand window.}
@@ -157,20 +157,25 @@ microsimulation. \label{fmsim-schema}}
 \end{figure}
 
 
-\subsection{Some input data} \label{s:theory}
+\subsection{Input data} \label{s:theory}
 
-Let's start with a very basic dataset. To aid understanding, we will first do
-the reweighting by hand to understand the process before automating it on the computer later. As outlined in Figure~\ref{fmsim-schema}, there are two input files required to perform spatial microsimulation:
+Let's start with a very basic dataset. To aid understanding, we will primarily do
+the reweighting by hand to understand the process before automating it on the computer.
+As outlined in Figure~\ref{fmsim-schema}, there are two input files required to perform spatial microsimulation:
 \begin{itemize}
   \item Survey data - information about individuals
   \item Geographically aggregated (`wide') data - typically aggregated Census tables
 \end{itemize}
 
-Table \ref{t:w} shows 5 individuals, who are defined by two constraint variables: age and sex. This is analguous to the survey data shown in Figure~\ref{fmsim-schema}. Table \ref{t:m} presents this same data in aggregated form, whose margin totals can be used in the IPF procedure described shortly.
+Table \ref{t:w} shows 5 individuals, who are defined by two constraint variables:
+age and sex. This is analogous to the survey data shown in Figure~\ref{fmsim-schema}.
+Table \ref{t:m} presents this same data in aggregated form, whose margin totals can
+be used in the IPF procedure described shortly. Note that individual 3 is highlighted in
+blue and bold for future reference.
 
 \begin{table}[h]
 % {r}{10cm}
-\caption{A hypothetical input microdata set (`Survey data')
+\caption{Hypothetical input microdata (`survey data')
 % (the original
 % weights set to one). The bold value is used subsequently for
 % illustrative purposes.
@@ -183,7 +188,7 @@ Table \ref{t:w} shows 5 individuals, who are defined by two constraint variables
 \midrule
 1 & 59 & Male  & 1 \\
 2 & 54 & Male & 1 \\
-3 & {35} & {Male} & \textbf{1} \\
+3 & {35} & {Male} & \textbf{\color{blue}1} \\
 4 & 73 & Female & 1 \\
 5 & 49 & Female & 1 \\
 % 1 & 59 & m \\
@@ -200,13 +205,17 @@ Table \ref{t:w} shows 5 individuals, who are defined by two constraint variables
 \centering
 \caption[The aggregated results of the weighted
 microdata set]{The aggregated results of the weighted
-microdata set ($m(1)$).
-Note, these values depend on the current weight so change after each iteration; this table is for the initial weight.}
+microdata set ($m$ --- think ``m'' for Modified or siMulated).
+Note, these values are updated by each new set of weights.
+% so change after each iteration.
+% hence the number ``(1)''
+% --- this table is for the initial weight.
+}
 
 \begin{tabular}{cllll}\toprule
 Marginal totals&  & \multicolumn{2}{c}{$j$} & \\
 & Age/sex & Male & Female & T\\ \midrule
-\multirow{2}{*}{$i$} & Under-50 & \textbf{1} & 1 & \textbf{\color{blue}2}\\
+\multirow{2}{*}{$i$} & Under-50 & \textbf{\color{blue}1} & 1 & \textbf{\color{blue}2}\\
 & Over-50 & 2 & 1 &3 \\
 & T & 3 & 2 &5\\
 \bottomrule
@@ -214,11 +223,14 @@ Marginal totals&  & \multicolumn{2}{c}{$j$} & \\
 \label{t:m}
 \end{table}
 
-Table \ref{t:s} contains data for a hypothetical area. This is analguous to the geographically aggregated 'wide' data shown in Figure~\ref{fmsim-schema}.
+Table \ref{t:s} contains data for a single area. This is analogous to the
+geographically aggregated 'wide' data shown in Figure~\ref{fmsim-schema}.
 
 \begin{table}[H]
 \centering{
-\caption{Small area constraints ($s$) (Geographically aggregated `wide' data). \label{t:s}}
+\caption{Small area constraints (geographically aggregated or `wide' input data).
+Note that although individual 3 fits into both ``under 50'' and ``male'' categories,
+only the value of the former is highlighted as age is the first constraint. \label{t:s}}
 \begin{tabular}{cllll}
 \toprule
 Constraint $\Rightarrow$ & \multicolumn{2}{c}{$i$}& \multicolumn{2}{c}{$j$}\\
@@ -229,13 +241,26 @@ Area $\Downarrow$  & Under-50 & Over-50 &  Male & Female\\
 \end{tabular}}
 \end{table}
 
-\Cref{t:s2} illustrates this aggregate level table in a different form, to show our ignorance of interaction between age and sex for this geography.
+Now, it will be recognised by the astute reader that the data in
+Tables \ref{t:m} and \ref{t:s} are incompatible: they are
+two matrices with different dimensions ($3 \times 3$ and $1 \times 4$ respectively).
+To solve this problem we can rearrange the small area census constraints data
+($s$, presented in Table \ref{t:s}) to match the dimensions of
+$m(1)$ (table \ref{t:m}).
+\Cref{t:s2} illustrates $s$ in a different form.
+Note that although we are ignorant of the internal values of this matrix,
+it is of the same dimension as $m(1)$ and the marginal totals (denoted ``T'' for
+total) can be directly compared. This is the basis of the method and provides a
+way to systematically compare individual level data with geographic aggregates.
 
 \begin{table}[h]
 \centering
 \caption[Small area constraints expressed as marginal totals]{Small
-area constraints expressed as marginal totals, and the cell
-values to be estimated.}
+area constraints (matrix $s$) re-arranged to be the same dimension as $m$ (Table \ref{t:m}).
+``s'' here stands for Small area data or conStraint. Note only
+the marginal totals are known. The internal cell
+values (represented by ``?'') must be estimated by spatial microsimulation.
+}
 \begin{tabular}{cllll}\toprule
 Marginal totals&  & \multicolumn{2}{c}{$j$} & \\
 & Age/sex & Male & Female & T\\ \midrule
@@ -257,36 +282,50 @@ With our input data in place, we can begin our first iteration.
 % \label{feq}
 % \end{wrapfigure}
 
-Using the tables about we readjust the weights of the
+Using the tables $m$ and $s$ presented above we readjust the weights of the
 individuals so that:
 
 \begin{itemize}
 % \item If there are exactly the same number of 
-  \item Individuals who are rare in the geography of interest are given a smaller weight (we need fewer of them).
-  \item Individuals who are common in the geography of interest are given a larger weight (we need more of them).
+  \item Individuals who are rare in the geographic zone of interest are given a smaller weight (we need fewer of them).
+  \item Individuals who are common in the zone of interest are given a larger weight (we need more of them).
   \item Their sum equals the total population of the geography of interest (12 in our example).
 \end{itemize}
 
-For each constraint the current weight is multiplied by the respective total from the geographically aggregated (Census) table (Table~\ref{t:s}) and divided by the corresponding marginal total of the survey data (see \cref{t:m}). For example, using the age constraint the weight for under 50 is calculated as follows: the initial weight is arbitrary, and set as 1; the number of individuals in the geographically aggregated (Census) data is 8; and the number of individuals under 50 in the survey data is 2. These are the figures highlighted in \textbf{\color{blue}bold and blue} in the preceeding tables. Thus:
+For each constraint the current weight is multiplied by the respective
+total from the geographically aggregated (census) table (Table~\ref{t:s}) and
+divided by the corresponding marginal total of the survey data (see \cref{t:m}).
+For example, using the age constraint the new weight of individual 3 is calculated
+based on the following numbers: the initial weight is set as 1, the number of
+individuals under 50 in the geographically aggregated (Census) data is 8 (see Table \ref{t:s})
+and the number
+of individuals under 50 in the survey data is 2. Thus the new weight is
+$1 \times \frac{8}{2}$. These figures
+are highlighted in \textbf{\color{blue}bold and blue} in the preceding tables.
+The same process is used to calculate the new weights for all individuals --- remember
+we are only constraining by age for now. Test your understanding by calculating
+the value of the ? symbols in the table below.
 
-\begin{table}[htbp]
-\centering
-\caption{Partially complete rewighting, using under 50 as an example.}
-\begin{tabular}{lllll}
-\toprule
-{Individual} & {Sex} & {age-group} & {Weight} &
-{New weight, $w_{2}$} \\ \midrule
-1 & Male & Over-50 & 1 & --- \\
-2 & Male & Over-50 & 1 & --- \\
-3 & Male & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
-4 & Female & Over-50 & 1 & --- \\
-5 & Female & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
-\bottomrule
-\end{tabular}
-\label{t:new-weights}
-\end{table}
+% \begin{table}[htbp]
+% \centering
+% \caption{Partially complete reweighted microdata.}
+% \begin{tabular}{lllll}
+% \toprule
+% {Individual} & {Sex} & {age-group} & {Weight} &
+% {New weight, $w_{2}$} \\ \midrule
+% 1 & Male & Over-50 & 1 & ? \\
+% 2 & Male & Over-50 & 1 & ? \\
+% 3 & Male & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
+% 4 & Female & Over-50 & 1 & ? \\
+% 5 & Female & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
+% \bottomrule
+% \end{tabular}
+% \label{t:new-weights}
+% \end{table}
 
-This is done one constraint at a time, as described in \cref{eq:ipf-word} and more precisely by \cref{eq:ipf} for constraint $i$ (age in this case):
+This process of \emph{reweighting} is done one constraint at a time. And can
+be described more succinctly in the form of a word equation
+\cref{eq:ipf-word} and more generally by \cref{eq:ipf} for constraint $i$ (age):
 
 \begin{equation}
   Weight_{New} = Weight_{Current} \times \frac{Census_{Constraint \: Total}}{Survey_{Constraint \: Total}}
@@ -307,8 +346,16 @@ $j$ of the aggregated results of the weighted
 microdata, $m$ (Table \ref{t:m}).
 $n$ represents the iteration number.
 
-Do not worry about understanding the above procedure for now.
-More important is implementing it. Using the example of under 50 as a template, calculate the new weight for individuals aged 50$+$. Table \ref{t:new-weights} illustrates the outcome to check your calculations. Notice that the sum of each weight ($W_2$, $W_3$, etc.) is always equal to the total population (12, in our example), which is a useful check.
+Do not worry about completely understanding the above procedure for now, its
+meaning will probably take time to sink in.
+More important is implementing it.
+
+Follow the blue emboldened values in tables 1 to 4 to fill in the
+question marks in the table below and calculate the new weight
+of individual 3, a male under 50 years of age.
+To validate your calculation, the sum of weights ($W_1$ to $W_5$)
+should equal the population of the zone (12, in our example). This is a
+useful check.
 
 \begin{table}[htbp]
 \centering
@@ -320,9 +367,9 @@ Table \ref{t:s}.}
 {New weight, w(2)} \\ \midrule
 1 & Male & Over-50 & 1 & $1 \times 4/3 = \frac{4}{3}$ \\
 2 & Male & Over-50 & 1 & $1 \times 4/3 = \frac{4}{3}$ \\
-3 & Male & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
+3 & Male & Under-50 & 1 & $1 \times \frac{\textbf{\color{blue}8}}{\textbf{\color{blue}?}} = \textbf{\color{blue}?}$ \\
 4 & Female & Over-50 & 1 & $1 \times 4/3 = \frac{4}{3}$ \\
-5 & Female & Under-50 & 1 & $1 \times \frac{\color{blue}8}{\color{blue}2} = 4$ \\
+5 & Female & Under-50 & 1 & $1 \times \frac{8}{2} = 4$ \\
 \midrule
 Total & & & 5 & 12 \\
 \bottomrule
@@ -330,7 +377,9 @@ Total & & & 5 & 12 \\
 \label{t:new-weights}
 \end{table}
 
-After creating $Weight_{New}$ for all possibilities of the first constraint (under 50 and 50$+$ for age), the individual level data is recreated (re-aggregated) before the next weight can be calculated using the next constraint.
+\subsection{Re-aggregation after the first constraint}
+After creating $Weight_{New}$ for all possibilities of the first constraint (under 50 and 50$+$ for age),
+the individual level data is re-aggregated before the next weight can be calculated using the next constraint.
 
 Re-aggregating the individual-level data --- to compare the marginal totals with the constraint tables
 ready for the second constraint --- will result in
@@ -344,7 +393,8 @@ for males over 50 ($\frac{4}{3}$ and 2). This is as follows
 (see the bold value in the bottom left of \cref{t:m2}):
 
 \begin{equation}
-\sum_{i = male} m(2) \; = \; \textbf{ 4} \times \textbf{1} + \frac{4}{3} \times 2 \; =  \; \textbf{4} + \frac{8}{3} \; = \textbf{6} \frac{\textbf{2}}{\textbf{3}}
+\sum_{i = male} m(2) \; = \; \textbf{\color{blue} 4} \times \textbf{\color{blue}1} + \frac{4}{3} \times 2 \; =  \;
+\textbf{\color{blue}4} + \frac{8}{3} \; = \textbf{\color{blue}6} \frac{\textbf{\color{blue}2}}{\textbf{\color{blue}3}}
 \end{equation}
 
 After performing this process of re-aggregation (\cref{t:m2}) for all categories,
@@ -357,7 +407,7 @@ w(3)_{ij} = \frac{w(2)_{ij} \times sT_{j}}{mT(2)_{j}}
 \label{eq:ipf2}
 \end{equation}
 
-\subsection{Test your understanding}
+\subsection{Test your understanding: the second constraint}
 To test your understanding of IPF, try to apply \cref{eq:ipf2} to the
 information above
 and that presented in \cref{t:m2}.
@@ -367,9 +417,9 @@ marks.  % Add online link to answers - tinyurl
 
 
 \begin{equation}
-w(3) = (\frac{6 \times \frac{4}{3}}{6 \frac{2}{3}}, \frac{6 \times
-\frac{4}{3}}{?}, \boldsymbol{ \frac{4 \times 6}{ 6\frac{2}{3}
-}}, \frac{?}{?}, \frac{4 \times 6}{5 \frac{1}{3}})
+w(3) = (\frac{6 \times \frac{4}{3}}{6 \frac{2}{3}},\;\;\; \frac{6 \times
+\frac{\;4\;}{\;3\;}}{\;?\;},\;\;\; \boldsymbol{ \frac{\color{blue}4 \times 6}{\color{blue} 6\frac{2}{3}
+}}, \;\;\;\frac{\;?\; \times \;?\;}{?}, \;\;\;\frac{4 \times 6}{5 \frac{1}{3}})
 % w(3) = (\frac{6}{5}, \frac{6}{5}, \frac{18}{5}, \frac{3}{2}, \frac{9}{2})
 \end{equation}
 
@@ -381,7 +431,7 @@ true:
 \begin{equation}
 % w(3) = (\frac{6}{5}, \frac{6}{?}, \boldsymbol{ \frac{4 \times 6}{ 6\frac{2}{3}
 % }}, \frac{?}{?}, \frac{9}{2})
-w(3) = (\frac{6}{5}, \frac{6}{5}, \boldsymbol{\frac{18}{5}}, \frac{3}{2},
+w(3) = (\frac{6}{5}, \frac{6}{5}, \boldsymbol{\frac{\color{blue}18}{\color{blue}5}}, \frac{3}{2},
 \frac{9}{2})
 \label{finalout}
 \end{equation}
@@ -414,9 +464,9 @@ microdata set after constraining for age ($m(2)$).
 \begin{tabular}{cllll}\toprule
 Marginal totals&  & \multicolumn{2}{c}{$i$} & \\
 & Age/sex & Male & Female & T\\ \midrule
-\multirow{2}{*}{$j$} & Under-50 & \textbf{4} & 4 & 8\\
+\multirow{2}{*}{$j$} & Under-50 & \textbf{\color{blue}4} & 4 & 8\\
 & Over-50 & $\frac{8}{3}$ & $\frac{4}{3}$ & 4 \\
-& T & $\boldsymbol{6\frac{2}{3}}$ & 5$\frac{1}{3}$ & 12\\
+& T & $\boldsymbol{{\color{blue}6}\frac{\color{blue}2}{\color{blue}3}}$ & 5$\frac{1}{3}$ & 12\\
 \bottomrule
 \end{tabular}
 \label{t:m2}
@@ -432,7 +482,9 @@ Marginal totals&  & \multicolumn{2}{c}{$i$} & \\
 % R code we use to automate IPF will likely seem like a foreign language
 % to many. Spreadsheet programs like Microsoft Excel and LibrOffice Calc are
 % comparatively well known, though.
-R is an unfamiliar programme to many, so before we move on to producing an R script that can calculate weights, we will carry out an intermediary step in a spreadsheet programme. For small examples like the one we are using, a spreadsheet has the two main advantages that: it is already familiar to many so can act as a bridge to calculating IPF using a computer; and it is easier to see and recall more than one table in a spreadsheet compared to R with R Studio.
+R is an unfamiliar programme to many, so before we move on to producing an R script that can calculate weights, we will carry out an intermediary step in a spreadsheet programme.\footnote{This
+example was produced by Phil Mike Jones --- see \href{http://www.philmikejones.net/}{philmikejones.net}.}
+For small examples like the one we are using, a spreadsheet has the two main advantages that: it is already familiar to many so can act as a bridge to calculating IPF using a computer; and it is easier to see and recall more than one table in a spreadsheet compared to R with R Studio.
 
 Open sms-spreadsheet-exercise.xlxs in your favourite spreadsheet programme (Microsoft Excel or LibreOffice/OpenOffice Calc) and follow the tasks outlined in the file. The steps are exactly the same as the pen and paper example above to allow you to more easily check your answers; to help with the transition of performing the calculations of IPF in a computer programme; and to aid recall of the procedure through repetition.
 
@@ -445,7 +497,7 @@ This section explains how the IPF
 same input data.\footnote{A fuller tutorial is available from Rpubs, a site dedicated
 to publishing R analyses that are reproducible. This tutorial uses the RMarkdown
 mark-up language, which enables R code to be run and presented within
-documents. See http://rpubs.com/RobinLovelace/5089 \label{fnrpub} .}
+documents. See \href{http://rpubs.com/RobinLovelace/5089}{rpubs.com/RobinLovelace/5089}\label{fnrpub}.}
 % This section is based on ``Spatial microsimulation in R: a
 % beginner’s guide to iterative proportional fitting (IPF)'', a tutorial
 % written to accompany a methods paper on integerisation
@@ -468,7 +520,7 @@ To check that the \emph{data frames} have loaded correctly, simply
 ask R to print their contents by entering the object's name. To display the
 individual level data, for example, simply type the
 following:\footnote{An alternative
-way to do this is to click on the object's name in the `Environment' tab in
+solution is to click the object's name in `Environment' in
 RStudio's top right window.}
 
 \begin{lstlisting}[float=h, caption={Checking the contents of the individual
@@ -651,7 +703,7 @@ weights3[,1] # check the weights allocated for zone 1
 ##    [1] 1.2 1.2 3.6 1.5 4.5
 \end{lstlisting}
 
-\newpage
+% \newpage
 \subsection{Iterations}
 
 In the above example, we have seen the `bare bones' of spatial microsimulation
@@ -1023,7 +1075,16 @@ meaning that random numbers are not needed to generate the result and that the o
 integer) numbers.
 \end{itemize}
 
-\citep{harland2013microsimulation}
+\section{Acknowledgements}
+Many thanks to Phil Mike Jones from the University of Sheffield for working through early drafts
+of this document and providing very useful input to the teaching materials overall.
+Thank you to Amy O'Neill and Rosie Temple for organising the
+\href{http://www.ncrm.ac.uk/training/show.php?article=4786}{National Centre for Research Methods (NCRM) course}
+``An Introduction to Spatial Microsimulation using R''
+and dealing with the high demand. Finally, thanks to the open source software movement
+overall, for encouraging best practice in reproducible research and
+making powerful tools such as R accessible to anyone, regardless of income, nationality
+or status.
 
 % \lhead{\emph{Bibliography}}  % Change the left side page header to
 % \fancyhead[LO,RE]{\emph{Bibliography}}
